# PennAiR-Shape-Detector

./: README.md
install/: local_setup.bash  local_setup.ps1  local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/shape_detection/lib/shape_detection/: shape_detector  video_publisher
install/shape_detection/share/shape_detection/: package.sh
install/shape_detection/share/shape_detection/launch/: detect_shapes.launch.py
log/: latest_build
src/shape_detection/: IMG_SOLUTION.py  README.md  VIDEO_SOLUTION.py  setup.cfg  setup.py
src/shape_detection/Results/Reports/: dynamic_report.txt  static_report.txt  video_report.txt
src/shape_detection/install/: local_setup.sh  local_setup.zsh  setup.sh
src/shape_detection/install/shape_detection/share/shape_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/shape_detection/launch/: detect_shapes.launch.py
src/shape_detection/log/: latest_build
src/shape_detection/shape_detection/: video_publisher.py
